spring-cloud-k8s/spring-cloud-k8s-gateway/src/main/jkube/k8s-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-k8s-gateway
  namespace: bjrdc-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-k8s-gateway
  template:
    metadata:
      labels:
        app: spring-cloud-k8s-gateway
    spec:
      containers:
      - name: spring-cloud-k8s-gateway-server
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8097
