spring-cloud-k8s/spring-cloud-k8s-gateway/src/main/jkube/k8s-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-k8s-gateway
  namespace: bjrdc-dev
spec:
  selector:
    app: spring-cloud-k8s-gateway
  ports:
  - name: http
    port: 8097
