spring-cloud-k8s/spring-cloud-k8s-gateway/src/main/jkube/k8s-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-k8s-gateway-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-k8s-gateway
        backend:
          serviceName: spring-cloud-k8s-gateway
          servicePort: 8097
